# Moondream

./: .gitignore  Dockerfile  check_setup.sh  commands.txt  detect_gpu.sh  docker-compose.cpu.yml  docker-compose.nvidia.yml  entrypoint.sh  eror.txt  setup_ros_env.sh
Summaries/: 3DGazeNetETSummary.txt  3DGazeNetMTSummary.txt  MoondreamSummary.txt
rviz_views/: kinect_view_pc+image_color.rviz  kinect_view_with_snapshot.rviz
src/gaze_detection/: CMakeLists.txt  package.xml
src/gaze_detection/launch/: gaze_detection.launch  gaze_detection_input_output.launch
src/gaze_detection/scripts/: evaluation_3DGazeNet.py  evaluation_script_node.py  frame_process_node.py  gaze_detection_input_output.py  gaze_detection_node.py  gaze_detection_video_processing.py  gaze_to_3d_mapper.py  get_static_transform.py  run_gaze_detection_input_output_wrapper.sh  snapshot_service_node.py  test_gaze_detection.py
