<?xml version="1.0"?>
<package format="2">
  <name>gaze_detection</name>
  <version>0.1.0</version>
  <description>ROS package for face and gaze detection using Moondream 2</description>

  <maintainer email="krejovicmarko@gmail.com">Marko Krejovic</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-transformers</exec_depend>
  <exec_depend>python3-safetensors</exec_depend>
  <exec_depend>python3-accelerate</exec_depend>
  
  <export>
  </export>
</package>